test/modules/error/only_nonexistant.f90
module a
end module

module b
    use a, only: foo
end module b